--- a/config/unbound/unbound.conf
+++ b/config/unbound/unbound.conf
@@ -1,34 +1,58 @@
 # /etc/unbound/unbound.conf
-# to deploy use:
-# sudo install -m 0644 /home/julie/src/homelab/config/unbound/unbound.conf /etc/unbound/unbound.conf
-# sudo chown root:root /etc/unbound/unbound.conf
-# sudo unbound-checkconf /etc/unbound/unbound.conf
-# sudo systemctl enable unbound
-# sudo systemctl restart unbound
-# sudo systemctl status unbound
-# sudo journalctl -u unbound -f
+#
+# Purpose:
+#   Recursive DNS resolver backend for the homelab.
+#   - Listens on localhost for local resolvers (dnsmasq, systemd-resolved)
+#   - Listens on LAN IP for the router only
+#   - Provides validated, DNSSEC-aware recursion
+#
+# Deployment procedure:
+#   sudo unbound-checkconf /home/julie/src/homelab/config/unbound/unbound.conf
+#   sudo install -o root -g root -m 0644 /home/julie/src/homelab/config/unbound/unbound.conf /etc/unbound/unbound.conf
+#   sudo systemctl restart unbound
+#
+# One-time setup:
+#   sudo systemctl enable unbound
+#
+# Verification:
+#   sudo systemctl status unbound
+#   sudo journalctl -u unbound -f
 
 server:
+    # Listen on loopback for local DNS frontends
     interface: 127.0.0.1
     interface: ::1
 
-    # Allow Unbound to send queries out via any interface
+    # Listen on LAN IP for router-only recursion
+    interface: 10.89.12.4
+
+    # Allow outbound queries via any interface (IPv4 and IPv6)
     outgoing-interface: 0.0.0.0
     outgoing-interface: ::
     
+    # Backend resolver port (dnsmasq forwards here)
     port: 5335
+
+    # Prefer IPv6 when available, but support both stacks
     do-ip6: yes
     prefer-ip6: yes
+
+    # Run as unprivileged user
     username: "unbound"
     pidfile: ""
     do-daemonize: no
 
-    # Split-horizon override for Headscale DERP
+    # Local override for Headscale DERP endpoint
+    # Prevents recursion and enforces split-horizon behavior
     local-data: "derp.vpn.bardi.ch. A 127.0.0.1"
 
+    # Enable DNSSEC validation and iterative resolution
     module-config: "validator iterator"
+
+    # Allow querying localhost (required for local resolvers)
     do-not-query-localhost: no
 
+    # DNSSEC trust anchor and root hints
     auto-trust-anchor-file: "/var/lib/unbound/root.key"
     val-permissive-mode: no
     root-hints: "/var/lib/unbound/root.hints"
@@ -36,62 +60,82 @@ server:
     # ------------------------------------------------------------
     # Access control
     # ------------------------------------------------------------
+    # Access control model:
+    # - Unbound is not a client-facing resolver.
+    # - Only local resolvers (dnsmasq, systemd-resolved) and the router
+    #   are allowed to query Unbound directly.
+    # - WireGuard and Tailscale clients never reach Unbound; they send DNS
+    #   to the router, which forwards queries on their behalf.
+    # - Therefore, no explicit access-control entries are required for
+    #   WireGuard or Tailscale address ranges.
+
+    # Allow local processes (dnsmasq, systemd-resolved, diagnostics)
     access-control: 127.0.0.1/32 allow
     access-control: ::1/128 allow
-    access-control: 127.0.0.0/8 allow        # dnsdist
-    #access-control: 10.89.0.0/16 allow
-    #access-control: 2a01:8b81:4800:9c00::/64 allow
-    #access-control: 100.64.0.0/10 allow     # Tailscale
-    #access-control: 10.1.0.0/24 allow       # wg1
-    #access-control: 10.3.0.0/24 allow       # wg3
-    #access-control: 10.5.0.0/24 allow       # wg5
-    #access-control: 10.7.0.0/24 allow       # wg7
-    #access-control: fd10:4::/64 allow       # wg4 IPv6
-    #access-control: fd10:5::/64 allow       # wg5 IPv6
-    #access-control: fd10:6::/64 allow       # wg6 IPv6
-    #access-control: fd10:7::/64 allow       # wg7 IPv6
+    access-control: 127.0.0.0/8 allow
+
+    # Allow recursion from the router only
+    access-control: 10.89.12.1/32 allow
+
+    # Explicitly refuse all other LAN clients
+    access-control: 10.89.12.0/24 refuse
 
     # ------------------------------------------------------------
     # Performance tuning
     # ------------------------------------------------------------
+    # Threading and cache sharding
     num-threads: 5
     msg-cache-slabs: 8
     rrset-cache-slabs: 8
     infra-cache-slabs: 8
     key-cache-slabs: 8
 
+    # Cache sizing
     msg-cache-size: 256m
     rrset-cache-size: 512m
     key-cache-size: 128m
     neg-cache-size: 4m
 
+    # Aggressive prefetching for latency reduction
     prefetch: yes
     prefetch-key: yes
+
+    # Query concurrency limits
     outgoing-range: 4096
     num-queries-per-thread: 8192
+
+    # Serve expired records while refreshing in background
     serve-expired: yes
 
+    # Socket tuning
     so-reuseport: yes
     so-rcvbuf: 8m
     so-sndbuf: 8m
 
+    # Privacy hardening
     hide-identity: yes
     hide-version: yes
     qname-minimisation: yes
 
+    # Moderate verbosity for operational visibility
     verbosity: 2
 
 # ------------------------------------------------------------
 # Authoritative-only resolution for bardi.ch
 # ------------------------------------------------------------
+# Delegate bardi.ch to its authoritative nameservers
+# Prevents unnecessary recursion for local domain
 stub-zone:
     name: "bardi.ch."
     stub-host: ns11.infomaniak.ch
     stub-host: ns12.infomaniak.ch
 
 # ------------------------------------------------------------
-# Recursive forwarding
+# Recursive forwarding (disabled)
 # ------------------------------------------------------------
+# Unbound performs full recursion by default.
+# Forwarding can be enabled here if upstream resolvers are desired.
+#
 # forward-zone:
 #    name: "."
 #
@@ -112,8 +156,9 @@ stub-zone:
 #    forward-addr: 185.95.218.43
 
 # ------------------------------------------------------------
-# Remote control
+# Remote control interface
 # ------------------------------------------------------------
+# Enables unbound-control for runtime inspection and management
 remote-control:
     control-enable: yes
     control-interface: /run/unbound.ctl
