homelab: enforce execution invariants, remove legacy configs, and modernize operator interface

--- a/Makefile.help
+++ b/Makefile.help
@@ -1,145 +1,109 @@
-# Makefile.help
+# ============================================================
+# Makefile.help — Homelab operator interface
+# ============================================================
+
 .PHONY: help
 help:
 	@echo "[make] Available targets:"
 	@echo ""
-	@echo "  Firewall (nftables):"
-	@echo "    make nft-install        # Install firewall scripts and systemd units"
-	@echo "    make nft-apply          # Apply firewall rules (arms rollback timer)"
-	@echo "    make nft-confirm        # Confirm firewall rules (disarms rollback)"
-	@echo "    make nft-status         # Show active homelab firewall rules"
-	@echo "  Package and preflight"
-	@echo "	   make prereqs            # Install prerequisite tools (curl, jq, git, nftables, ndppd, dns utils, admin helpers)"
-	@echo "    make deps               # Install developer tooling (go, pandoc, checkmake, strace, vnstat)"
-	@echo "    make apt-update         # Force refresh apt cache (normally cached for $(APT_UPDATE_MAX_AGE)s)"
-	@echo "    make check-prereqs      # Verify required host commands (sudo, apt-get, git, ip, wg, etc.)"
+
+	@echo "🧱 Prerequisites"
+	@echo "  make prereqs                 # Install and verify core system prerequisites"
+	@echo "  make deps                    # Install common build and runtime dependencies"
+	@echo "  make apt-update              # Force refresh apt cache (normally cached)"
 	@echo ""
-	@echo "  Linting"
-	@echo "    make lint               # Run permissive lint suite (shellcheck, checkmake, spell, headscale configtest)"
-	@echo "    make lint-fast          # Fast lint (shell syntax, shellcheck, checkmake) - permissive"
-	@echo "    make lint-all           # Full permissive lint (fast + spell + headscale)"
-	@echo "    make lint-ci            # STRICT CI lint (fails on any ShellCheck/checkmake/codespell/aspell issues)"
+
+	@echo "🔐 Security / access control"
+	@echo "  make harden-groups           # Verify group membership invariants (read-only)"
+	@echo "  make enforce-groups          # Enforce group membership (authorized admin only)"
+	@echo "  make check-groups            # Inspect group memberships"
 	@echo ""
-	@echo "  Certificate lifecycle"
-	@echo "    make issue              # Issue new RSA+ECC certs"
-	@echo "    make renew              # Renew ECC (RSA fallback)"
-	@echo "    make prepare            # Prepare canonical store (deployable certs)"
+
+	@echo "🧩 System tuning"
+	@echo "  make install-homelab-sysctl  # Install and apply homelab sysctl forwarding config"
+	@echo "  make net-tunnel-preflight    # Ensure NIC offload settings for UDP tunnels"
 	@echo ""
-	@echo "  Deploy targets"
-	@echo "    make deploy-caddy       # Deploy certs to Caddy"
-	@echo "    make deploy-headscale   # Deploy certs to Headscale (optional)"
-	@echo "    make deploy-router      # Deploy certs to Asus router"
-	@echo "    make deploy-diskstation # Deploy certs to Synology DSM"
-	@echo "    make deploy-qnap        # Deploy certs to QNAP"
+
+	@echo "🔐 Certificates"
+	@echo "  make certs-ensure            # Ensure internal CA exists and is deployed"
+	@echo "  make certs-status            # Show CA and client certificate inventory"
+	@echo "  make certs-expiry            # Check CA expiry and days remaining"
+	@echo "  make gen-client-cert CN=...  # Generate or reissue a client certificate"
 	@echo ""
-	@echo "  Combined workflows"
-	@echo "    make all-caddy          # Renew + prepare + deploy + validate Caddy"
-	@echo "    make all-router         # Renew + prepare + deploy + validate Router"
-	@echo "    make all-diskstation    # Renew + prepare + deploy + validate DiskStation"
-	@echo "    make all-qnap           # Renew + prepare + deploy + validate QNAP"
+	@echo "  🚀 ACME / service certificates"
+	@echo "    make renew                 # Renew certificates"
+	@echo "    make deploy-caddy          # Deploy certs to Caddy"
+	@echo "    make deploy-headscale      # Deploy certs to Headscale"
+	@echo "    make deploy-dnsdist        # Deploy certs to dnsdist"
 	@echo ""
-	@echo "  Watchers and bootstrap"
-	@echo "    make setup-cert-watch-caddy     # Install + enable Caddy path unit for reload"
-	@echo "    make setup-cert-watch-headscale # Install + enable Headscale path unit for reload"
-	@echo "    make bootstrap-caddy            # setup watcher + all-caddy"
-	@echo "    make bootstrap-headscale        # setup watcher + all-headscale"
+	@echo "  🧰 Bootstrap"
+	@echo "    make bootstrap-caddy       # First-time cert setup for Caddy"
+	@echo "    make bootstrap-headscale   # First-time cert setup for Headscale"
+	@echo "    make bootstrap-all         # Bootstrap all local services"
 	@echo ""
-	@echo "  Repo and preflight"
-	@echo "    make ensure-known-hosts         # Ensure SSH known_hosts entries (interactive)"
-	@echo "    make gitcheck                   # Ensure homelab repo present"
-	@echo "    make update                     # Pull latest homelab repo"
+	@echo "  ⚠️  Dangerous"
+	@echo "    make certs-rotate          # Rotate internal CA (invalidates client certs)"
 	@echo ""
-	@echo "  Tailnet / Headscale"
-	@echo "    make headscale-stack          # Ensure Headscale service, namespaces, users, and ACLs"
-	@echo "    make tailscaled               # Full Tailscale orchestration (LAN role by default)"
-	@echo "    make tailscaled-lan           # Enroll this host as LAN-capable node (exit-node + subnet)"
-	@echo "    make tailscaled-wan           # Enroll this host as WAN-only node (internet access)"
-	@echo "    make tailscaled-status        # Show tailscaled health, traffic, and versions"
-	@echo "    make tailscaled-logs          # Tail tailscaled + role unit logs"
+
+	@echo "🌐 DNS"
+	@echo "  make dns-stack               # Install and configure dnsmasq + Unbound"
+	@echo "  make dns-preflight           # Validate DNS policy and split-horizon invariants"
+	@echo "  make dns-postflight          # Validate live DNS behavior (after dns-stack)"
+	@echo "  make dnsmasq-status          # Show dnsmasq service status"
 	@echo ""
-	@echo "  WireGuard (recommended workflow)"
-	@echo "    make wg                     # Apply intent (if changed) + show full status"
-	@echo "    make wg-apply               # Compile + deploy only"
-	@echo "    make wg-status              # Quick runtime summary"
-	@echo "    make wg-runtime             # Detailed runtime view"
+
+	@echo "🌍 Web / ingress"
+	@echo "  make caddy                   # Deploy and run Caddy reverse proxy"
+	@echo "  make caddy-validate          # Validate Caddyfile"
+	@echo "  make caddy-fmt               # Format Caddyfile"
 	@echo ""
-	@echo "  WireGuard (client operations)"
-	@echo "    make wg-show BASE=<b> IFACE=<wgX>   # Show client config + QR"
-	@echo "    make wg-qr   BASE=<b> IFACE=<wgX>   # Show QR only"
-	@echo "    make wg-remove-client BASE=<b> IFACE=<wgX>"
+
+	@echo "🔐 WireGuard — core workflow"
+	@echo "  make wg-compile              # Compile and validate WireGuard intent (no deploy)"
+	@echo "  make wg-apply                # Compile, deploy, and export client configs"
+	@echo "  make wg-check                # Run WireGuard consistency checks"
 	@echo ""
-	@echo "  WireGuard (⚠️  DESTRUCTIVE OPERATIONS ⚠️)"
-	@echo "                                   # Use ONLY when fixing structural config or rotating keys"
-	@echo "    make wg-rebuild-all            # FULL rebuild: stop WG, wipe configs + keys, regenerate, deploy"
-	@echo "    make wg-reinstall-all          # DESTRUCTIVE: wipe and recreate WG state (interactive)"
-	@echo "                                   #     - Rotates ALL server keys"
-	@echo "                                   #     - Invalidates ALL existing clients"
-	@echo "                                   #     - Rebuilds from authoritative CSV"
-	@echo "                                   #     - Requires explicit confirmation delay"
+	@echo "  ⚠️  Destructive"
+	@echo "    make wg-rebuild-all        # Full WireGuard rebuild (invalidates all clients)"
 	@echo ""
-	@echo "    Authoritative input:"
-	@echo "      /volume1/homelab/wireguard/input/clients.csv"
-	@echo "      (user,machine,iface ; comments allowed with '#')"
+
+	@echo "🔍 WireGuard — status & inspection"
+	@echo "  make wg-intent               # Show authoritative WireGuard intent"
+	@echo "  make wg-clients              # List clients with helper commands"
+	@echo "  make wg-status               # Show runtime interface status"
+	@echo "  make wg-runtime              # Show detailed WireGuard peer state"
+	@echo "  make wg-dashboard            # Show interface assignment per client"
+	@echo "  make wg-check-ports          # Verify WireGuard UDP ports"
 	@echo ""
-	@echo "    Profiles (by iface):"
-	@echo "      wg6 = WAN-only IPv4+IPv6, DNS via WG interface (Swiss TV)"
-	@echo "      wg7 = Full access (LAN + WAN IPv4/IPv6)"
+	@echo "  ✏️  Mutating"
+	@echo "    make wg-remove-client BASE=… IFACE=…   # Remove a WireGuard client"
 	@echo ""
-	@echo "  WireGuard (low-level / legacy helpers)"
-	@echo "    make wg0 .. wg7                 # Ensure server config and keys for wg0 through wg7"
-	@echo "    make wg-up-<N>                  # Bring up wgN (idempotent), e.g. make wg-up-7"
-	@echo "    make wg-down-<N>                # Bring down wgN (idempotent)"
-	@echo "    make wg-add-peers               # Program peers from generated client configs"
-	@echo "    make wg-clean-<N>               # Revoke all clients bound to wgN (destructive)"
-	@echo "    make wg-clean-list-<N>          # Preview files that would be removed for wgN"
-	@echo "    make all-wg                     # Ensure all wgN configs (wg0..wg7)"
-	@echo "    make all-wg-up                  # Bring up all wg interfaces"
-	@echo "    make wg-reinstall-all           # LEGACY: destructive WG reset (superseded by wg-rebuild-all)"
+
+	@echo "📱 WireGuard — client helpers"
+	@echo "  make wg-show BASE=… IFACE=…   # Show client config and QR code"
+	@echo "  make wg-qr   BASE=… IFACE=…   # Show QR code only"
 	@echo ""
-	@echo "  Note: All WireGuard targets must be invoked via the canonical Makefile entrypoint."
+
+	@echo "🧪 WireGuard — diagnostics"
+	@echo "  make wg-runtime-recover       # Recover live WireGuard runtime state (no config changes)"
 	@echo ""
-	@echo "  Client management"
-	@echo "    make client-<name>              # Generate client config (name may include -wgN or use IFACE=wgN)"
-	@echo "    make client-list                # List client artifacts (*.conf, *.key, *.pub)"
-	@echo "    make client-clean-<name>        # Revoke a single client (backup + remove runtime peer)"
-	@echo "    make client-showqr-<name>       # Show QR for client (auto-create if missing)"
-	@echo "    make all-clients-generate       # Generate clients from authoritative CSV (compiled plan)"
-	@echo "    make client-dashboard           # Emoji table of users/machines vs interfaces"
+
+	@echo "🧰 WireGuard — bootstrap"
+	@echo "  make wg-bootstrap             # Initialize WireGuard filesystem layout (run once)"
 	@echo ""
-	@echo "  DNS"
-	@echo "    make dns-stack                  # Install + configure dnsmasq + Unbound (split-horizon baseline)"
-	@echo "    make dns-warm-install           # Install DNS cache warming service + timer"
-	@echo "    make dns-warm-enable            # Enable and start DNS cache warming (every minute)"
-	@echo "    make dns-warm-disable           # Disable DNS cache warming"
-	@echo "    make dns-warm-status            # Show dns-warm service + timer status"
-	@echo "    make dns-warm-uninstall         # Remove DNS cache warming service + timer"
-	@echo "    make dns-runtime                # Enable DNS runtime helpers (dnsdist + dns-warm)"
-	@echo "    DISABLED: make dnscrypt-proxy   # Install + configure dnscrypt-proxy (systemd unit, curated config)"
+
+	@echo "🛠️  Maintenance"
+	@echo "  make fix-acme-perms           # Repair ACME certificate permissions"
+	@echo "  make check-acme-perms         # Inspect ACME certificate permissions"
 	@echo ""
-	@echo "  Monitoring and system helpers"
-	@echo "    make check-dns                  # Run DNS health check"
-	@echo "    make install-systemd            # Install systemd units"
-	@echo "    make enable-systemd             # Enable and start systemd watchers"
-	@echo "    make clean                      # Cleanup (tailscaled units, etc.)"
-	@echo "    make reload                     # systemd daemon-reload"
-	@echo "    make restart                    # Restart tailscaled services"
-	@echo "    make test                       # Run run_as_root harness"
+
+	@echo "📦 Infrastructure"
+	@echo "  make install-all              # Install all homelab scripts"
+	@echo "  make uninstall-all            # Remove all homelab scripts"
 	@echo ""
-	@echo "[make] WireGuard notes:"
-	@echo "  - Authoritative intent lives in:"
-	@echo "      /volume1/homelab/wireguard/input/clients.csv"
-	@echo "  - This file is the ONLY human-edited input; everything else is derived."
-	@echo "  - Validation failures never modify deployed state (last-known-good remains active)."
-	@echo "  - Direct editing of /etc/wireguard is unsupported and will be overwritten."
-	@echo "  - Direct client generation targets remain available for emergency/manual use."
-	@echo ""
-	@echo "[make] WireGuard bootstrap:"
-	@echo "  See header comments in:"
-	@echo "    /volume1/homelab/wireguard/input/clients.csv"
-	@echo ""
+
 	@echo "[make] Notes:"
-	@echo "  - make deps now installs developer tools used by lint: shellcheck, codespell, aspell, checkmake."
-	@echo "  - The Makefile caches apt-get update for $(APT_UPDATE_MAX_AGE) seconds; use 'make apt-update' to force refresh."
-	@echo "  - Use 'make lint-ci' in CI to enforce strict linting (fails on ShellCheck/checkmake/codespell/aspell issues)."
-	@echo "  - Source builds (checkmake, headscale) are guarded by version/stamp checks to avoid unnecessary rebuilds."
-	@echo "  - Use SKIP_KNOWN_HOSTS=1 to skip the interactive known_hosts check."
+	@echo "  - All state is intent-driven; validation failures never modify deployed state."
+	@echo "  - Scripts are never executed from the repository."
+	@echo "  - Destructive targets are explicit and never run implicitly."
+	@echo "  - Re-running targets is safe unless explicitly marked dangerous."
