help: clarify certificate lifecycle and mark destructive CA rotation

--- a/Makefile.help
+++ b/Makefile.help
@@ -24,14 +24,15 @@ help:
 	@echo "  make net-tunnel-preflight    # Ensure NIC offload settings for UDP tunnels"
 	@echo ""
 
-	@echo "🔐 Certificates"
+	@echo "🔐 Certificates — internal CA"
 	@echo "  make certs-ensure            # Ensure internal CA exists and is deployed"
 	@echo "  make certs-status            # Show CA and client certificate inventory"
 	@echo "  make certs-expiry            # Check CA expiry and days remaining"
 	@echo "  make gen-client-cert CN=...  # Generate or reissue a client certificate"
+	@echo "  ⚠️  make certs-rotate-dangerous   # Rotate internal CA (invalidates ALL client certs)"
 	@echo ""
-	@echo "  🚀 ACME / service certificates"
-	@echo "    make renew                 # Renew certificates"
+	@echo "  🚀 ACME / service certificates (derived)"
+	@echo "    make renew                 # Renew ACME certificates"
 	@echo "    make deploy-caddy          # Deploy certs to Caddy"
 	@echo "    make deploy-headscale      # Deploy certs to Headscale"
 	@echo "    make deploy-dnsdist        # Deploy certs to dnsdist"
