lint: enforce semantic invariants and silence known tool noise

--- a/checkmake.ini
+++ b/checkmake.ini
@@ -1,2 +1,8 @@
 [maxbodylength]
 maxBodyLength = 10000
+files = mk/*.mk Makefile
+# Allow large recipe bodies in orchestration Makefiles
+
+[minphony]
+ignore = true
+files = mk/*.mk
